--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -901,7 +901,7 @@ and immediate contact with him through chat).
 					\item getting a list of items for constructing witnesses 
 						for lints that checks for exhaustiveness of the pattern matching. 
 				\end{itemize}
-				Manually verified the found results with the rest of the team.
+				Manually verified the results with the rest of the team.
 		\end{itemize}
 
 	\item Michał \cite{responsibilities-michal}:
