--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -890,7 +890,7 @@ and immediate contact with him through chat).
 			\item Diagnosed a user-encountered compilation error which happened because of changes
 				in one of the tool's dependencies.
 			\item Took part in the development of the library based on the existing tool's code.
-			\item Wrote \texttt{semver-crater} that runs cargo-semver-checks on the most popular crates
+			\item Developed \texttt{semver-crater} that runs cargo-semver-checks on the most popular crates
 				(see section \ref{section_results_semver_crater})
 				and wrote numerous scripts for analyzing the results, e.g. for:
 				\begin{itemize}
