--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -892,7 +892,7 @@ and immediate contact with him through chat).
 			\item Took part in the development of the library based on the existing tool's code.
 			\item Developed \texttt{semver-crater} that runs cargo-semver-checks on the most popular crates
 				(see section \ref{section_results_semver_crater})
-				and wrote numerous scripts for analyzing the results, e.g. for:
+				and wrote numerous scripts for analyzing the results, designated for:
 				\begin{itemize}
 					\item parsing the output of cargo-semver-checks to get the list of affected items,
 					\item filtering releases which were affected by the \say{doc-hidden} false-positives,
