--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -896,7 +896,7 @@ and immediate contact with him through chat).
 				\begin{itemize}
 					\item parsing the output of cargo-semver-checks to get the list of affected items,
 					\item filtering releases which were affected by the \say{doc-hidden} false-positives,
-					\item creating witnesses for each kind of triggered lints,
+					\item creating witnesses for all kinds of triggered lints,
 					\item checking whether the witnesses found true-positives,
 					\item getting a list of items for constructing witnesses 
 						for lints that checks for exhaustiveness of the pattern matching. 
