--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -898,8 +898,8 @@ and immediate contact with him through chat).
 					\item filtering releases which were affected by the \say{doc-hidden} false-positives,
 					\item creating witnesses for all kinds of triggered lints,
 					\item verifying whether the witnesses found true-positives,
-					\item getting a list of items for constructing witnesses 
-						for lints that checks for exhaustiveness of the pattern matching. 
+					\item getting a list of items for construction of witnesses 
+						for lints that check the exhaustiveness of pattern matching. 
 				\end{itemize}
 				Manually verified the results with the rest of the team.
 		\end{itemize}
